CHANGELOG for Plupload integration for Drupal 7

Plupload integration 7.x-1.6
=================================
- #2171575 by slashrsm | kreatIL: Plupload library not found (version 1.5.8).
- #2098555 by slashrsm: Suggest using .zip instead of .tar.gz.

Plupload integration 7.x-1.5
=================================
- by slashrsm: Update README.txt with new download links.
- #2132373 by OnkelTem: Plupload doesn't support international file names.
- #2098555 by slashrsm: Document library v2.0.0 incompatibility.

Plupload integration 7.x-1.4
=================================
- #2065927 by vladan.me: Added Plupload events support.
- #2081263 by hgneng: Fixed Check transliteration setting before apply transliteration action.

Plupload integration 7.x-1.3
=================================
- #2063161 by mfgering | Amon_Re: Fixed Multi Upload with plupload broken when using Drupal 7.23.

Plupload integration 7.x-1.2
=================================
- #1999264 by slashrsm: up_arrow.png and up_arrow_disabled.png are very large.
- #1935256 by Primsi: Fixed When a form has more than one submit button plupload always submits using the first one.

Plupload integration 7.x-1.1
=================================
- #1903818 by quicksketch, slashrsm: Fixed Double dollar signs in hook_requirements().
- #1506642 by MrHaroldA | succinct: Fixed plupload.js issue with Internet Explorer.
- #1814744 by slashrsm, Kevin Hankens: File URI not available to hook_file_validate() implementations.
- #1895328 by larowlan, slashrsm: Fixed Security exploit in plupload external library examples folder.
- #1230632 by -enzo-, slashrsm: Fixed hard-coded file size limits.
- by slashrsm: Fix CodeSniffer errors.
- #1827368 by Kevin Hankens: Fixed Use standard language when validating files.
- #1565898 by slashrsm: Create docs for Plupload element usage in README.txt.
- #1111036 by slashrsm: Blacklist script extensions if 'allow_insecure_uploads' isn't set to TRUE.