@@ -1,0 +1,9 @@
+api = 2
+core = 7.x
+
+; Libraries
+libraries[plupload][directory_name] = plupload
+libraries[plupload][download][type] = file
+libraries[plupload][download][url] = https://github.com/moxiecode/plupload/archive/v1.5.8.zip
+libraries[plupload][patch][1903850] = https://drupal.org/files/issues/plupload-1_5_8-rm_examples-1903850-16.patch
+libraries[plupload][type] = library
